Fix Chrome edge flicker by removing fixed background layers

--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,14 @@ img {
 }
 
 .bg-layer {
-  position: fixed;
+  position: absolute; /* changed from fixed */
   inset: auto;
   pointer-events: none;
   z-index: 0;
-  contain: paint; /* isolates painting = reduces edge flicker */
 }
 
 .bg-layer-top {
+  position: absolute;
   top: -12rem;
   right: -7rem;
   width: 26rem;
@@ -64,6 +64,7 @@ img {
 }
 
 .bg-layer-bottom {
+  position: absolute;
   bottom: -14rem;
   left: -10rem;
   width: 30rem;
